bugfix: made button visible in safari

--- a/client/style.css
+++ b/client/style.css
@@ -39,7 +39,11 @@ article {
     
     color: white;
     font-family: 'Teko', sans-serif;
-    font-size: 24px;
+    font-size: 28px;
+}
+
+h1 {
+    font-size: 2em;
 }
 
 h2 {
@@ -116,6 +120,8 @@ button {
     border-radius: 5px;
     box-shadow: none;
     margin: 25px;
+    color: black;
+    background-color: white;
 }
 
 button:hover {
@@ -123,7 +129,6 @@ button:hover {
     cursor: pointer;
 
 }
-
 button:active {
     box-shadow: -1px 1px 4px 2px rgba(0,0,0,0.7) inset;
 }
